you did it added the playing functionality and theme

--- a/public/index.html
+++ b/public/index.html
@@ -853,7 +853,7 @@
     <div  v-for="synth in synths">
       <p> {{ synth.name }} </p>
       <audio controls>
-       <source v-bind:src="synths.url" type="audio/x-wav"> {{ synth.audioFile_file_name }}  </audio>
+       <source v-bind:src="synth.url" type="audio/x-wav">  </audio>
     </div>
 	</template>
 
