--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
 	<link rel="stylesheet" href="css/main.css">
 
 
+
 </head>
 <body>
 
@@ -81,7 +82,7 @@
 						</button>
 
 						<ul class="header__user-menu">
-							<li><a href="#">Profile</a></li>
+							<li><a href="#/profile">Profile</a></li>
 							<li><a href="/#/signup">Signup</a></li>
      					<li><a href="/#/login">Login</a></li>
      					<li><a href="/#/logout">Logout</a></li>
@@ -198,71 +199,12 @@
 	<!-- end sidebar -->
 </div>
 
+	</div>
 	<!-- content -->
-
-
-
-
-
-  </div>
-
-
 		<div>
 			<main class="content-wrap clearfix">
 				<div class="content">
-					<!-- home slider -->
-					<section class="section section--first">
-						<div class="row">
-							<div class="col-xs-12">
-								<div class="home-carousel-wrap">
-									<div class="home-carousel owl-carousel">
-										<!-- slide -->
-										<div class="item home-carousel__item" data-bg="img/home/slide.jpg">
-											<div class="home-carousel__text">
-												<div class="home-carousel__title home-carousel__title--right">
-													<h1>Listen songs with<br><span>Blast</span> template</h1>
-													<a href="https://themeforest.net/user/dmitryvolkov/portfolio?ref=DmitryVolkov" target="_blank" class="default-btn default-btn--red">buy template</a>
-												</div>
-											</div>
-										</div>
-										<!-- end slide -->
 
-										<!-- slide -->
-										<div class="item home-carousel__item" data-bg="img/home/slide.jpg">
-											<div class="home-carousel__text">
-												<div class="home-carousel__title home-carousel__title--white">
-													<h1>Forbidden Forest</h1>
-													<h2>by Albert Lory</h2>
-													<a href="#" class="default-btn">buy album</a>
-												</div>
-											</div>
-										</div>
-										<!-- end slide -->
-
-										<!-- slide -->
-										<div class="item home-carousel__item" data-bg="img/home/slide.jpg">
-											<div class="home-carousel__text">
-												<div class="home-carousel__title home-carousel__title--white">
-													<h1>New Artist of Our Label</h1>
-													<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-													<a href="#" class="default-btn default-btn--white">view more</a>
-												</div>
-											</div>
-										</div>
-										<!-- end slide -->
-									</div>
-
-									<button class="home-carousel-nav__prev">
-										<span class="lnr lnr-arrow-left"></span>
-									</button>
-									<button class="home-carousel-nav__next">
-										<span class="lnr lnr-arrow-right"></span>
-									</button>
-								</div>
-							</div>
-						</div>
-					</section>
-					<!-- end home slider -->
 
 					<!-- new releases -->
 					<section class="section">
@@ -844,11 +786,84 @@
 </html>
 
 <template id="home-page">
+	<div>
+		<main class="content-wrap clearfix">
+			<div class="content">
+						<!-- home slider -->
+					<section class="section section--first">
+						<div class="row">
+							<div class="col-xs-12">
+								<div class="home-carousel-wrap">
+									<div class="home-carousel owl-carousel">
+										<!-- slide -->
+										<div class="item home-carousel__item" data-bg="/pictures/cover1.jpg">
+											<div class="home-carousel__text">
+												<div class="home-carousel__title home-carousel__title--right">
+													<h1>Find any kind of sound with<br><span>Sample Spotter</span></h1>
+													<a href="/#/profile"  class="default-btn default-btn--red">Get Started</a>
+												</div>
+											</div>
+										</div>
+										<!-- end slide -->
+
+										<!-- slide -->
+										<div class="item home-carousel__item" data-bg="/pictures/cover6.jpg">
+											<div class="home-carousel__text">
+												<div class="home-carousel__title home-carousel__title--white">
+													<h1>Upload Your Own Audio Files</h1>
+													<h2>Add effects or even make your own sampler!</h2>
+													<a href="#" class="default-btn">Check it out!</a>
+												</div>
+											</div>
+										</div>
+										<!-- end slide -->
+
+										<!-- slide -->
+										<div class="item home-carousel__item" data-bg="/pictures/cover7.png">
+											<div class="home-carousel__text">
+												<div class="home-carousel__title home-carousel__title--white">
+													<h1>Download Any Sound and add it to Your Personal Project</h1>
+													<a href="#" class="default-btn default-btn--white">Explore</a>
+												</div>
+											</div>
+										</div>
+										<!-- end slide -->
+									</div>
+
+									<button class="home-carousel-nav__prev">
+										<span class="lnr lnr-arrow-left"></span>
+									</button>
+									<button class="home-carousel-nav__next">
+										<span class="lnr lnr-arrow-right"></span>
+									</button>
+								</div>
+							</div>
+						</div>
+					</section>
+					<!-- end home slider -->
+			</div>
+		</main>
+	</div>
+</template>
+
+<template id="profile-page">
 		<div>
     <h2>Create a new sound:</h2>
     <div>
+    		<!-- jquery knob -->
+    		<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/aterrien/jQuery-Knob/755309e9/dist/jquery.knob.min.js"></script>
     	<button v-on:click="display()"> test noise </button>
     	<button v-on:click="sampler()"> sampler </button>
+
+    	<input type="text" value="75" class="dial">
+
+<script>
+    $(function() {
+        $(".dial").knob();
+    });
+</script>
+
       name: <input type="text" name="name" v-model="newSynth.name">
     </div>
 
