--- a/public/index.html
+++ b/public/index.html
@@ -855,8 +855,8 @@
     	<button v-on:click="display()"> test noise </button>
     <div>
 
-    	<button id="gainKnob" class="btn btn-primary"v-on:click="sampler()"> sampler </button>
-  	<label> delay <input type="text" value="100" class="dial"> </label>
+    	<button id="gainKnob" class="btn btn-primary" v-on:click="sampler()"> sampler </button>
+  	<label> delay <input type="number" value="50" class="dial"> </label>
       name: <input type="text" name="name" v-model="newSynth.name">
     </div>
 
