--- a/public/index.html
+++ b/public/index.html
@@ -1117,9 +1117,11 @@
 
 <template id="edit-synth-page">
 	<div class="container">
-		 <div>
+			 <div>
     <h2>Create a new sound:</h2>
     	<button id="sampler" class="btn btn-primary" v-on:click="playSample()"> play </button>
+    	<button id="recordId" v-on:click="recordButton()"> test </button>
+    	 <audio controls></audio>
     	<button class="btn btn-primary" v-on:click="submit()">Submit</button>
   	<label> delay <input type="text" value="50" class="delay-dial"> </label>
   	<label> filter <input type="text" value="50" class="filter-dial"> </label>
@@ -1132,6 +1134,29 @@
       <audio controls>
        <source v-bind:src="synth.url" type="audio/x-wav">  </audio>
        <router-link v-bind:to="{ path: '/profile' }">Back to profile </router-link>
+
+       <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    tags &#8964;
+  </button>
+  <div class="dropdown-menu btn btn-secondary" aria-labelledby="dropdownMenuButton">
+    <p class="dropdown-item" id="action" onclick="declanAddTag(this)">Action</p>
+    <p class="dropdown-item">Another action</p>
+    <p class="dropdown-item">Something else here</p>
+  </div>
+</div>
+<div id="container">
+  <div class="inner">original inner div</div>
+ </div>
+       <span class="badge badge-primary">Primary</span>
+<span class="badge badge-secondary">Secondary</span>
+<span class="badge badge-success">Success</span>
+<span class="badge badge-danger">Danger</span>
+<span class="badge badge-warning">Warning</span>
+<span class="badge badge-info">Info</span>
+<span class="badge badge-light">Light</span>
+<span class="badge badge-dark">Dark</span>
+</div>
     </div>
 	</div>
 </template>
