more fun with tags, they now have a thier very own pages to live in

--- a/public/index.html
+++ b/public/index.html
@@ -385,7 +385,7 @@
 							<!-- section title -->
 							<div class="col-xs-12">
 								<div class="section__title clearfix">
-									<h2>New Releases</h2>
+									<h2>Categories</h2>
 									<a class="section__more" href="releases.html">See All</a>
 								</div>
 							</div>
@@ -394,11 +394,10 @@
 							<!-- release -->
 							<div class="col-xs-6 col-sm-3">
 								<article class="release-post">
-									<figure class="release-post__cover"><a href="/#/album"><img src="./pictures/album1.jpg" alt=""></a></figure>
+									<figure class="release-post__cover"><a href="/#/tags/1"><img src="./pictures/album1.jpg" alt=""></a></figure>
 
 									<header class="release-post__header">
-										<h2 class="release-post__title"><a href="release.html">Traffic</a></h2>
-										<a href="artist.html" class="release-post__autor">Johnny Smith</a>
+										<h2 class="release-post__title"><a href="tags/1">Traffic</a></h2>
 									</header>
 								</article>
 							</div>
@@ -407,11 +406,10 @@
 							<!-- release -->
 							<div class="col-xs-6 col-sm-3">
 								<article class="release-post">
-									<figure class="release-post__cover"><a href="/#/album"><img src="./pictures/album2.jpg" alt=""></a></figure>
+									<figure class="release-post__cover"><a href="/#/tags/2"><img src="./pictures/album2.jpg" alt=""></a></figure>
 
 									<header class="release-post__header">
-										<h2 class="release-post__title"><a href="release.html">Video Game 8-bit</a></h2>
-										<a href="artist.html" class="release-post__autor">Jane Doe</a>
+										<h2 class="release-post__title"><a href="/#/tags/2">Video Game 8-bit</a></h2>
 									</header>
 								</article>
 							</div>
@@ -420,11 +418,10 @@
 							<!-- release -->
 							<div class="col-xs-6 col-sm-3">
 								<article class="release-post">
-									<figure class="release-post__cover"><a href="/#/album"><img src="./pictures/album3.jpg" alt=""></a></figure>
+									<figure class="release-post__cover"><a href="/#/tags/3"><img src="./pictures/album3.jpg" alt=""></a></figure>
 
 									<header class="release-post__header">
-										<h2 class="release-post__title"><a href="release.html">Filtered Drums</a></h2>
-										<a href="artist.html" class="release-post__autor">Taylor</a>
+										<h2 class="release-post__title"><a href="/#/tags/3">Filtered Drums</a></h2>
 									</header>
 								</article>
 							</div>
@@ -433,11 +430,10 @@
 							<!-- release -->
 							<div class="col-xs-6 col-sm-3">
 								<article class="release-post">
-									<figure class="release-post__cover"><a href="/#/album"><img src="./pictures/album4.jpg" alt=""></a></figure>
+									<figure class="release-post__cover"><a href="/#/tags/4"><img src="./pictures/album4.jpg" alt=""></a></figure>
 
 									<header class="release-post__header">
-										<h2 class="release-post__title"><a href="release.html">Outdoors</a></h2>
-										<a href="artist.html" class="release-post__autor">Jack J.</a>
+										<h2 class="release-post__title"><a href="/#/tags/4">Outdoors</a></h2>
 									</header>
 								</article>
 							</div>
@@ -1153,3 +1149,4 @@
     </div>
 	</div>
 </template>
+
