--- a/public/index.html
+++ b/public/index.html
@@ -1135,14 +1135,14 @@
     tags &#8964;
   </button>
   <div class="dropdown-menu btn btn-secondary" aria-labelledby="dropdownMenuButton" id="dropDownTags">
-    <p class="dropdown-item" id="traffic" v-on:click="createTags($event)">Traffic</p>
-    <p class="dropdown-item" v-on:click="createTags($event)" id="8-bit">8-bit</p>
-    <p class="dropdown-item" v-on:click="createTags($event)" id="filteredDrums">Filtered Drums</p>
-    <p class="dropdown-item" v-on:click="createTags($event)" id="outdoors">Outdoors</p>
+    <p class="dropdown-item" id="1" v-on:click="createTags($event)">Traffic</p>
+    <p class="dropdown-item" v-on:click="createTags($event)" id="2">8-bit</p>
+    <p class="dropdown-item" v-on:click="createTags($event)" id="3">Filtered Drums</p>
+    <p class="dropdown-item" v-on:click="createTags($event)" id="4">Outdoors</p>
   </div>
   <button class="btn btn-primary" v-on:click="submit()">Submit</button>
 </div>
-<div id="container">
+<div id="dropContainer">
   <div class="inner"></div>
  </div>
 </div>
@@ -1150,3 +1150,14 @@
 	</div>
 </template>
 
+<template id="show-tag-page">
+	<div class="container">
+		<br><br>
+<br>	<br>
+		<div v-for="synth in synths">
+			 <div v-if="synth.id === $route.params"> -->
+			<h1>{{ synth.name }}</h1>
+	</div>
+ -->		</div>
+	</div>
+</template>
